examples/test/testpolicy14216.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14216
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key25: value37
      key21: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value4
          key23: value31
      podSelector:
        matchLabels:
          key39: value43
          key40: value27
          key32: value5
